@@ -7,17 +7,166 @@
     <version>1.0.0</version>
     <modules>
         <module>spring-learn-web</module>
+        <module>spring-learn-common</module>
     </modules>
 
     <properties>
+        <!--local module start-->
+        <spring-learn>1.0.0</spring-learn>
+        <!--local module end-->
+
         <spring.version>5.0.2.RELEASE</spring.version>
         <slf4j.version>1.7.24</slf4j.version>
         <log4j.over.slf4j.version>1.7.24</log4j.over.slf4j.version>
         <logback.version>1.1.11</logback.version>
-        <lombok.version>1.16.4</lombok.version>
+        <lombok.version>1.16.0</lombok.version>
+
+        <!--maven plugin start-->
+        <maven.compiler.plugin.version>3.1</maven.compiler.plugin.version>
+        <maven.surefire.plugin.version>2.17</maven.surefire.plugin.version>
+        <maven.jar.plugin.version>2.6</maven.jar.plugin.version>
+        <maven.resources.plugin.version>2.6</maven.resources.plugin.version>
+        <maven.war.plugin.version>2.4</maven.war.plugin.version>
+        <autoconfig-plugin.version>1.2</autoconfig-plugin.version>
+        <!--maven plugin end-->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>${maven.resources.plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <version>${maven.war.plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>${maven.compiler.plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>${maven.jar.plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>${maven.surefire.plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <version>${maven.war.plugin.version}</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <meminitial>1024m</meminitial>
+                    <maxmem>1024m</maxmem>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m</argLine>
+                    <includes>
+                        <include>**/*Test.java</include>
+                    </includes>
+                    <argLine>-XX:-UseSplitVerifier</argLine>
+                    <!-- 打包过程忽略Junit测试 -->
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+
+    <repositories>
+        <!--<repository>-->
+        <!--<id>out-repo</id>-->
+        <!--<name>out-repo</name>-->
+        <!--<url>http://45.62.108.159:8081/nexus/content/groups/public/</url>-->
+        <!--<releases>-->
+        <!--<enabled>true</enabled>-->
+        <!--</releases>-->
+        <!--<snapshots>-->
+        <!--<enabled>true</enabled>-->
+        <!--</snapshots>-->
+        <!--</repository>-->
+        <repository>
+            <id>internal-repo</id>
+            <name>internal-repo</name>
+            <url>http://172.16.0.73:8081/nexus/content/groups/public/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>sibu-nexus</id>
+            <name>sibu-nexus</name>
+            <url>http://172.16.0.73:8081/nexus/content/groups/public/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
+
+    <distributionManagement>
+        <repository>
+            <id>releases</id>
+            <name>Nexus Release Repository</name>
+            <url>http://172.16.0.73:8081/nexus/content/repositories/releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>snapshots</id>
+            <name>Nexus Snapshot Repository</name>
+            <url>http://172.16.0.73:8081/nexus/content/repositories/snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
+
     <dependencyManagement>
         <dependencies>
+            <!--local module start-->
+            <dependency>
+                <groupId>com.walkbear.spring-learn</groupId>
+                <artifactId>spring-learn-common</artifactId>
+                <version>${spring-learn}</version>
+            </dependency>
+            <!--local module end-->
+
             <!-- lombok start-->
             <dependency>
                 <groupId>org.projectlombok</groupId>
@@ -72,9 +221,35 @@
                 <version>${spring.version}</version>
             </dependency>
             <!--spring end-->
-        </dependencies>
 
+            <!--maven plugin start-->
+
+            <!--maven plugin end-->
+        </dependencies>
     </dependencyManagement>
 
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <properties>
+                <env>dev-app</env>
+            </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+        <profile>
+            <id>test</id>
+            <properties>
+                <env>dev-app</env>
+            </properties>
+        </profile>
+        <profile>
+            <id>product</id>
+            <properties>
+                <env>product-app</env>
+            </properties>
+        </profile>
+    </profiles>
 
 </project>
